--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <form
         class="overlayForm"
         id="innerCircleForm"
-        action="PASTE_YOUR_FORMSPREE_LINK_HERE"
+        action="https://formspree.io/f/mvzbgkbd"
         method="POST"
       >
         <label class="srOnly" for="email">Email address</label>
