--- a/index.html
+++ b/index.html
@@ -1,63 +1,95 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yaldah Issa — Inner Circle</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Fonts used in your CSS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=EB+Garamond:wght@400;500&display=swap" rel="stylesheet">
+  <title>Yaldah Issa — Inner Circle</title>
 
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&family=EB+Garamond:wght@400;500&display=swap" rel="stylesheet">
 
-  <body>
-    <main class="wrap">
-      <section class="card">
-        <div class="brand">YALDAH ISSA</div>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 
-        <div class="divider">
-          <span class="line"></span>
-          <span class="mini">JOIN THE</span>
-          <span class="line"></span>
-        </div>
+<body>
 
-        <h1 class="title">YALDAH ISSA<br/>INNER CIRCLE</h1>
+  <!-- MAIN JOIN LIST CARD -->
+  <main class="wrap">
+    <section class="card">
 
-        <p class="copy">
-          Be the first to access exclusive collections,<br />
-          private sales, and limited releases.
-        </p>
+      <div class="brand">YALDAH ISSA</div>
 
-        <p class="copy">
-          Join our community of women who lead<br />
-          with purpose and grace.
-        </p>
+      <div class="divider">
+        <span class="line"></span>
+        <span class="mini">JOIN THE</span>
+        <span class="line"></span>
+      </div>
 
-        <form class="form" action="https://formspree.io/f/mvzbgkbd" method="POST">
-          <label class="srOnly" for="email">Email</label>
-          <input id="email" name="email" type="email" placeholder="Enter your email" required />
-          <button type="submit">JOIN NOW*</button>
-        </form>
+      <h1 class="title">INNER<br> CIRCLE</h1>
 
-        <p class="note">Members receive early access and special pricing.</p>
+      <p class="copy">
+        Be the first to access exclusive collections,
+        private sales, and limited releases.
+      </p>
 
-        <div class="orn" aria-hidden="true">
-          <span class="ornLine"></span>
-          <span class="diamond"></span>
-          <span class="ornLine"></span>
-        </div>
+      <p class="copy">
+        Join a community of women who lead
+        with purpose and grace.
+      </p>
 
-        <p class="foot">© <span id="year"></span> Yaldah Issa. All rights reserved.</p>
-      </section>
-    </main>
+      <!-- FORM -->
+      <form
+        class="form"
+        action="https://formspree.io/f/mvzbgkbd"
+        method="POST"
+      >
+        <label class="srOnly" for="email">Email</label>
 
-    <script>
-      document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
-  </body>
+        <input
+          id="email"
+          name="email"
+          type="email"
+          placeholder="Enter your email"
+          required
+        />
+
+        <button type="submit">JOIN NOW*</button>
+      </form>
+
+      <p class="note">
+        Members receive early access and private invitations.
+      </p>
+
+      <div class="orn">
+        <span class="ornLine"></span>
+        <span class="diamond"></span>
+        <span class="ornLine"></span>
+      </div>
+
+      <p class="foot">
+        © <span id="year"></span> Yaldah Issa. All rights reserved.
+      </p>
+
+    </section>
+  </main>
+
+
+  <!-- BOTTOM IMAGE -->
+  <section class="bottom">
+    <img src="/asset1/hero.png" alt="Yaldah Issa Collection">
+  </section>
+
+
+  <script>
+    document.getElementById("year").textContent =
+      new Date().getFullYear();
+  </script>
+
+</body>
 </html>
+
 
 
