--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yaldah Issa — Inner Circle</title>
-  <link rel="stylesheet" href="./styles.css?v=5" />
+  <title>Yaldah Issa — Join List</title>
+  <link rel="stylesheet" href="./styles.css?v=10" />
 </head>
-
 <body>
   <main class="poster">
-    <!-- real form overlay -->
+    <!-- invisible real form (still collects emails) -->
     <form class="overlayForm" action="https://formspree.io/f/mvzbgkbd" method="POST">
       <label class="srOnly" for="email">Email</label>
       <input id="email" name="email" type="email" placeholder="Enter your email" required />
       <button type="submit">JOIN NOW*</button>
     </form>
-
-    <!-- bottom image blended in -->
-    <img class="hero" src="/asset1/hero.png" alt="Yaldah Issa" />
   </main>
 </body>
 </html>
+
 
 
 
