--- a/index.html
+++ b/index.html
@@ -3,20 +3,71 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Yaldah Issa — Join List</title>
-  <link rel="stylesheet" href="./styles.css?v=10" />
+  <title>Yaldah Issa | Inner Circle</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600&family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-  <main class="poster">
-    <!-- invisible real form (still collects emails) -->
-    <form class="overlayForm" action="https://formspree.io/f/mvzbgkbd" method="POST">
-      <label class="srOnly" for="email">Email</label>
-      <input id="email" name="email" type="email" placeholder="Enter your email" required />
-      <button type="submit">JOIN NOW*</button>
-    </form>
+
+  <main class="container">
+
+    <section class="card">
+
+      <!-- Logo -->
+      <img src="IMG_2654.jpeg" alt="Yaldah Issa Logo" class="logo">
+
+      <!-- Brand -->
+      <h1 class="brand">YALDAH ISSA</h1>
+
+      <p class="tagline">INNER CIRCLE</p>
+
+      <!-- Message -->
+      <p class="text">
+        Be the first to access exclusive collections,
+        private sales, and limited releases.
+      </p>
+
+      <p class="text soft">
+        For women who lead with purpose and grace.
+      </p>
+
+      <!-- Note -->
+      <p class="note">
+        Members receive early access and special pricing.
+      </p>
+
+      <!-- Form AFTER note -->
+      <form
+        action="https://formspree.io/f/mvzbgkbd"
+        method="POST"
+        class="form"
+      >
+        <input
+          type="email"
+          name="email"
+          placeholder="Enter your email"
+          required
+        />
+
+        <button type="submit">
+          JOIN THE CIRCLE
+        </button>
+      </form>
+
+      <p class="note small">
+        ✨ Limited access • Members only
+      </p>
+
+    </section>
+
   </main>
+
 </body>
 </html>
+
 
 
 
