--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     body{
       min-height:100vh;
-      background-image: url("A_promotional_digital_digital_graphic_for_the_Yald.png");
+      background-image: url(background-image: url("hero.png");
+);
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
