--- a/index.html
+++ b/index.html
@@ -6,159 +6,160 @@
 
   <title>Yaldah Issa | Inner Circle</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600&family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;600&family=EB+Garamond:wght@400;500&display=swap" rel="stylesheet">
 
   <style>
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
+    :root{
+      --gold:#b08a5a;
+      --gold-dark:#8d6b45;
+      --ink:#3a2f27;
+      --soft:#6f655b;
+      --bg1:#f6efe7;
+      --bg2:#efe4d6;
+      --card:#ffffff;
     }
 
-    html, body {
-      height: 100%;
-      font-family: "Cormorant Garamond", serif;
+    *{
+      box-sizing:border-box;
+      margin:0;
+      padding:0;
     }
 
-    /* Background image */
-    body {
-      min-height: 100vh;
-
-      background-image: url("hero.png");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 24px;
+    html,body{
+      height:100%;
+      font-family:"EB Garamond", serif;
+      color:var(--ink);
     }
 
-    /* Dark overlay for readability */
-    body::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background: rgba(0,0,0,0.35);
-      z-index: -1;
+    /* Page background */
+    body{
+      min-height:100vh;
+      background: linear-gradient(180deg,var(--bg1),var(--bg2));
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      padding:24px;
     }
 
-    /* Main content box */
-    .box {
-      background: rgba(255,255,255,0.92);
-      max-width: 560px;
-      width: 100%;
+    /* Main box */
+    .card{
+      width:min(560px,100%);
+      background:var(--card);
+      padding:50px 34px;
+      text-align:center;
 
-      padding: 48px 32px;
-      text-align: center;
+      border-radius:18px;
+      border:1px solid rgba(176,138,90,.25);
 
-      border-radius: 14px;
-      border: 1px solid rgba(176,138,90,0.3);
-
-      box-shadow: 0 25px 70px rgba(0,0,0,0.2);
-      backdrop-filter: blur(4px);
+      box-shadow:0 22px 60px rgba(0,0,0,.12);
     }
 
     /* Logo */
-    .logo {
-      width: 110px;
-      margin-bottom: 16px;
+    .logo{
+      width:110px;
+      margin-bottom:18px;
     }
 
     /* Brand */
-    .brand {
-      font-size: 40px;
-      letter-spacing: 0.18em;
-      color: #8d6b45;
-      margin-bottom: 6px;
+    .brand{
+      font-family:"Cormorant Garamond", serif;
+      font-size:42px;
+      letter-spacing:.18em;
+      color:var(--gold-dark);
+      margin-bottom:6px;
     }
 
-    .tagline {
-      font-family: "Playfair Display", serif;
-      font-size: 20px;
-      letter-spacing: 0.22em;
-      color: #b08a5a;
-      margin-bottom: 22px;
+    .tagline{
+      font-size:17px;
+      letter-spacing:.28em;
+      color:var(--gold);
+      margin-bottom:22px;
+    }
+
+    /* Title */
+    .title{
+      font-family:"Cormorant Garamond", serif;
+      font-size:44px;
+      letter-spacing:.14em;
+      color:var(--gold-dark);
+      margin-bottom:18px;
+      line-height:1.05;
     }
 
     /* Text */
-    .text {
-      font-size: 19px;
-      color: #4f463c;
-      margin-bottom: 12px;
-      line-height: 1.6;
+    .text{
+      font-size:19px;
+      line-height:1.6;
+      color:var(--soft);
+      margin-bottom:14px;
     }
 
-    .soft {
-      color: rgba(79,70,60,0.75);
-    }
-
-    /* Note */
-    .note {
-      font-size: 17px;
-      color: rgba(79,70,60,0.8);
-      margin: 18px 0 14px;
+    .note{
+      font-size:17px;
+      color:var(--soft);
+      margin:20px 0 16px;
     }
 
     /* Form */
-    .form {
-      display: flex;
-
-      border: 1px solid #b08a5a;
-      border-radius: 6px;
-      overflow: hidden;
-
-      background: rgba(255,255,255,0.25);
+    .form{
+      display:flex;
+      border:1px solid var(--gold);
+      border-radius:8px;
+      overflow:hidden;
+      margin-top:6px;
     }
 
-    .form input {
-      flex: 1;
-      padding: 14px;
-      border: none;
-      outline: none;
-      font-size: 17px;
+    .form input{
+      flex:1;
+      border:none;
+      outline:none;
+      padding:15px 16px;
+      font-size:17px;
+      font-family:inherit;
     }
 
-    .form button {
-      border: none;
-      padding: 14px 22px;
-
-      background: linear-gradient(180deg,#c59b63,#8d6b45);
-      color: white;
-
-      font-weight: 600;
-      letter-spacing: 0.14em;
-
-      cursor: pointer;
-      transition: 0.25s ease;
+    .form input::placeholder{
+      color:#9a9086;
     }
 
-    .form button:hover {
-      opacity: 0.9;
-      transform: translateY(-1px);
+    .form button{
+      border:none;
+      padding:15px 20px;
+
+      background:linear-gradient(180deg,var(--gold),var(--gold-dark));
+      color:white;
+
+      font-weight:600;
+      letter-spacing:.14em;
+      cursor:pointer;
+
+      transition:.2s ease;
     }
 
-    .small {
-      font-size: 15px;
-      color: rgba(79,70,60,0.65);
-      margin-top: 14px;
+    .form button:hover{
+      opacity:.9;
+      transform:translateY(-1px);
+    }
+
+    .small{
+      font-size:14px;
+      color:#8a8177;
+      margin-top:14px;
     }
 
     /* Mobile */
-    @media (max-width:520px){
+    @media(max-width:520px){
 
-      .brand {
-        font-size: 32px;
+      .brand{ font-size:34px; }
+      .title{ font-size:36px; }
+
+      .form{
+        flex-direction:column;
       }
 
-      .form {
-        flex-direction: column;
-      }
-
-      .form button {
-        width: 100%;
+      .form button{
+        width:100%;
       }
 
     }
@@ -168,29 +169,35 @@
 
 <body>
 
-  <section class="box">
+  <section class="card">
 
-    <!-- Logo -->
-    <img src="IMG_2654.jpeg" class="logo" alt="Yaldah Issa Logo">
+    <!-- LOGO -->
+    <img src="IMG_2654.jpeg" alt="Yaldah Issa Logo" class="logo">
 
-    <!-- Text -->
-    <h1 class="brand">YALDAH ISSA</h1>
-    <p class="tagline">INNER CIRCLE</p>
+    <!-- Brand -->
+    <div class="brand">YALDAH ISSA</div>
+    <div class="tagline">INNER CIRCLE</div>
 
+    <!-- Title -->
+    <h1 class="title">JOIN OUR<br>PRIVATE LIST</h1>
+
+    <!-- Message -->
     <p class="text">
       Be the first to access exclusive collections,
-      private sales, and limited releases.
+      private releases, and members-only offers.
     </p>
 
-    <p class="text soft">
-      For women who lead with purpose and grace.
+    <p class="text">
+      Created for women who lead with
+      confidence, elegance, and purpose.
     </p>
 
+    <!-- Note -->
     <p class="note">
       Members receive early access and special pricing.
     </p>
 
-    <!-- Form AFTER text -->
+    <!-- Form -->
     <form
       class="form"
       action="https://formspree.io/f/mvzbgkbd"
@@ -205,13 +212,13 @@
       >
 
       <button type="submit">
-        JOIN THE CIRCLE
+        JOIN NOW
       </button>
 
     </form>
 
     <p class="small">
-      ✨ Limited access • Members only
+      ✨ Limited access • Invitation only
     </p>
 
   </section>
